src/objects/Cloudaction_Email_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to store data related to email templates. CSS Styles are stored here, and can be managed system wide through the custom settings. The Salesforce Domain and Reply Address are also stored here. These will eliminate promotion errors and the need to update URLs in email templates after promotion from a sandbox to production org.</description>
    <fields>
        <fullName>Reply_Address__c</fullName>
        <description>Stores the email address used to send inbound emails to Salesforce.</description>
        <label>Reply Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Domain__c</fullName>
        <description>Stores the Salesforce Domain for use in record links.</description>
        <label>Salesforce Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_BODY__c</fullName>
        <description>This field is used to store the default css style for BODY elements.</description>
        <label>Style BODY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_PRE__c</fullName>
        <description>This field is used to store the default css style for PRE elements.</description>
        <label>Style PRE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_TABLE__c</fullName>
        <description>This field is used to store the default css style for TABLE elements.</description>
        <label>Style TABLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_TD__c</fullName>
        <description>This field is used to store the default css style for TD elements.</description>
        <label>Style TD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_TH__c</fullName>
        <description>This field is used to store the default css style for TH elements.</description>
        <label>Style TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cloudaction Email Settings</label>
</CustomObject>